ContentManagement/DotCms/helm/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.1 (a9d05d509)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.1 (a9d05d509)
      creationTimestamp: null
      labels:
        io.kompose.network/dbnet: "true"
        io.kompose.service: db
    spec:
      securityContext:
          fsGroup:10000
      containers:
        - args:
            - postgres
            - -c
            - max_connections=400
            - -c
            - shared_buffers=128MB
          image: postgres:14
          name: db
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/dotcmsdb
              name: dbdata
      restartPolicy: Always
      volumes:
        - name: dbdata
          persistentVolumeClaim:
            claimName: dbdata
status: {}
